# agentic-ai-lab

./: .gitignore  1-basic.py  pyproject.toml  readme.md  requirements.txt  setup.cfg
agentic_ai_lab.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/agentic_ai_lab.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/agents/: basic_2_openai_agent.py  basic_openai_agent.py
src/utils/: cache.py  config.py
