[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-ai-lab"
version = "0.1.0"
description = "Agentic AI Lab"
readme = "readme.md"
requires-python = ">=3.12"

[project.scripts]
agentic-ai-lab = "src.agents.basic_openai_agent:main"

[tool.setuptools.packages.find]
where = ["."]
